<?xml version="1.0" encoding="utf-8"?>
<com.penner.android.view.bottomtab.penner.chat.ImageMessageView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/chat_msg_paddingtop">

    <TextView
        android:id="@+id/chat_msg_timestamp"
        style="@style/chat_text_date_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chat_margin_activity" >

        <ImageView
            android:id="@+id/chat_msg_userhead"
            android:layout_width="@dimen/chat_size_avatar"
            android:layout_height="@dimen/chat_size_avatar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/chat_margin_activity"
            android:layout_marginEnd="@dimen/chat_margin_activity"
            android:src="@mipmap/default_useravatar"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:id="@+id/chat_msg_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/chat_margin_activity"
            android:layout_marginEnd="@dimen/chat_margin_activity"
            android:layout_toLeftOf="@id/chat_msg_userhead"
            android:layout_toStartOf="@id/chat_msg_userhead">

            <im.pubu.androidim.common.view.AsyncImageView
                android:id="@+id/chat_msg_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chat_msg_to"
                android:scaleType="fitCenter" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/chat_msg_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/chat_msg_picture"
            android:layout_toStartOf="@id/chat_msg_picture"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/chat_msg_progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/chat_msg_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_picture_tips"
                android:textColor="@android:color/black"
                android:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/chat_msg_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/chat_msg_picture"
            android:layout_toStartOf="@id/chat_msg_picture"
            android:clickable="true"
            android:src="@mipmap/chat_msg_state_fail_resend"
            android:visibility="gone" />

        <TextView
            android:id="@+id/chat_msg_ack"
            style="@style/chat_text_name_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/chat_msg_picture"
            android:layout_toStartOf="@id/chat_msg_picture"
            android:text="@string/chat_ack_msg"
            android:textSize="12sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/chat_msg_delivered"
            style="@style/chat_text_name_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/chat_delivered_msg"
            android:textSize="12sp"
            android:layout_toLeftOf="@id/chat_msg_picture"
            android:layout_toStartOf="@id/chat_msg_picture"
            android:visibility="invisible" />
    </RelativeLayout>

</com.penner.android.view.bottomtab.penner.chat.ImageMessageView>