<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.penner.android.view.bottomtab.ChatActivity">

    <include layout="@layout/penner_toolbar"/>

    <LinearLayout
        android:id="@+id/chat_bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4dp" >

            <Button
                android:id="@+id/btn_set_mode_voice"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:background="@mipmap/ic_chat_voice"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_set_mode_keyboard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/chat_btn_keyboard"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/btn_press_to_speak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@drawable/chat_btn_speak"
                android:gravity="center"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/chat_btn_pushtotalk"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/edittext_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:gravity="bottom" >

                <EditText
                    android:id="@+id/chat_edit_sendmsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_marginEnd="34dp"
                    android:background="@null"
                    android:maxLines="3"
                    android:minHeight="40dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingTop="3dp"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/chat_emoticons_normal"
                    android:layout_width="24dip"
                    android:layout_height="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|end"
                    android:layout_margin="1dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_chat_emoji"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/chat_emoticons_checked"
                    android:layout_width="24dip"
                    android:layout_height="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|end"
                    android:layout_margin="1dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_chat_emoji_checked"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/chat_btn_more"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/ic_chattype_add" />

            <Button
                android:id="@+id/chat_btn_send"
                android:layout_width="42dp"
                android:layout_height="32dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/chat_btn_send"
                android:text="@string/chat_btn_send"
                android:textColor="#666666"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:id="@+id/chat_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/chat_face_container"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:visibility="visible" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/chat_face_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chat_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="6dp"
                    android:weightSum="4" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/chat_btn_takepicture"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@mipmap/ic_chat_photo"
                                android:clickable="true"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chat_take_pic"
                            android:textColor="#727171" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/chat_btn_picture"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@mipmap/ic_chat_pic"
                                android:clickable="true"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chat_picture"
                            android:textColor="#727171" />
                    </LinearLayout>

                    <!--<LinearLayout-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:gravity="center"-->
                    <!--android:orientation="vertical" >-->

                    <!--<RelativeLayout-->
                    <!--android:layout_width="64dp"-->
                    <!--android:layout_height="64dp" >-->

                    <!--<ImageView-->
                    <!--android:id="@+id/chat_btn_location"-->
                    <!--android:layout_width="56dp"-->
                    <!--android:layout_height="56dp"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:clickable="true"-->
                    <!--android:scaleType="fitCenter"-->
                    <!--android:src="@mipmap/ic_chat_location" />-->
                    <!--</RelativeLayout>-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/chat_location"-->
                    <!--android:textColor="#727171" />-->
                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:gravity="center"-->
                    <!--android:orientation="vertical" >-->

                    <!--<RelativeLayout-->
                    <!--android:layout_width="64dp"-->
                    <!--android:layout_height="64dp" >-->

                    <!--<ImageView-->
                    <!--android:id="@+id/chat_btn_video"-->
                    <!--android:layout_width="56dp"-->
                    <!--android:layout_height="56dp"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:clickable="true"-->
                    <!--android:scaleType="fitCenter"-->
                    <!--android:src="@mipmap/ic_chat_video" />-->
                    <!--</RelativeLayout>-->

                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/chat_video"-->
                    <!--android:textColor="#727171" />-->
                    <!--</LinearLayout>-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="6dp"
                    android:visibility="gone"
                    android:weightSum="4" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_file"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_btn_files"
                                android:clickable="true"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chat_file"
                            android:textColor="#727171" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_voice_call"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_voice_call"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_btn_voice"
                                android:clickable="true"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chat_voice"
                            android:textColor="#727171" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/chat_bar_bottom"
        android:layout_below="@id/penner_toolbar" >

        <ProgressBar
            android:id="@+id/chat_load_more"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/chat_swipelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.penner.android.view.ChatRecyclerView
                android:id="@+id/chat_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/chat_load_more"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:dividerHeight="5dp"
                android:listSelector="#00000000"
                android:scrollbarStyle="outsideOverlay"
                android:transcriptMode="normal" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:id="@+id/chat_recording_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/chat_recording_container"
            android:padding="10dp"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/chat_mic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/chat_record_animate_01" />

            <TextView
                android:id="@+id/chat_recording_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chat_mic_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/chat_move_up_to_cancel"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
